{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 283,
  "lineage": "b21c3ff2-d5f1-0420-522b-3e712919a170",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0403dd4780cf37020",
            "domain": "vpc",
            "id": "eipalloc-0abf0a1fcd20e8881",
            "network_border_group": "us-east-1",
            "network_interface": "eni-042fc6b8a54610740",
            "private_dns": "ip-10-0-3-24.ec2.internal",
            "private_ip": "10.0.3.24",
            "public_dns": "ec2-54-234-198-215.compute-1.amazonaws.com",
            "public_ip": "54.234.198.215",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:720078235361:internet-gateway/igw-0addbd9dc5cfb0071",
            "id": "igw-0addbd9dc5cfb0071",
            "owner_id": "720078235361",
            "tags": {
              "Enviroment": "production",
              "Name": "terraform-eks-igw"
            },
            "vpc_id": "vpc-0dbd8d494b6ba7604"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0abf0a1fcd20e8881",
            "id": "nat-0404d29673f9bd27c",
            "network_interface_id": "eni-042fc6b8a54610740",
            "private_ip": "10.0.3.24",
            "public_ip": "54.234.198.215",
            "subnet_id": "subnet-0afb617b045ca673f",
            "tags": {
              "Environment": "production",
              "Name": "terraform-eks-production-ngw"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02d528c43b9272fc11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0404d29673f9bd27c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02d528c43b9272fc1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0addbd9dc5cfb0071",
            "id": "r-rtb-02ec55aeefa588c6c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02ec55aeefa588c6c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02d528c43b9272fc1",
            "owner_id": "720078235361",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0404d29673f9bd27c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0dbd8d494b6ba7604"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02ec55aeefa588c6c",
            "owner_id": "720078235361",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0addbd9dc5cfb0071",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0dbd8d494b6ba7604"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3804fd4570c9a40",
            "route_table_id": "rtb-02d528c43b9272fc1",
            "subnet_id": "subnet-04623f425c7852f3b"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5652d460ed88873",
            "route_table_id": "rtb-02d528c43b9272fc1",
            "subnet_id": "subnet-0616816437bc31e73"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f45863b8565ac93",
            "route_table_id": "rtb-02d528c43b9272fc1",
            "subnet_id": "subnet-0df563f3e78400d1f"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0734796a0de12900d",
            "route_table_id": "rtb-02ec55aeefa588c6c",
            "subnet_id": "subnet-0afb617b045ca673f"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e593e06c0083087",
            "route_table_id": "rtb-02ec55aeefa588c6c",
            "subnet_id": "subnet-0e3ee98153fc946d4"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbe76ea747664dd2",
            "route_table_id": "rtb-02ec55aeefa588c6c",
            "subnet_id": "subnet-022be46fd71268fd2"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:720078235361:security-group/sg-0bfdcdddb2cd75e83",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0bfdcdddb2cd75e83",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "terraform-eks-production-default-sg",
            "name_prefix": "",
            "owner_id": "720078235361",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0dbd8d494b6ba7604"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:720078235361:subnet/subnet-04623f425c7852f3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.48.0/22",
            "id": "subnet-04623f425c7852f3b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "720078235361",
            "tags": {
              "Name": "terraform-eks-production-sbn-public-0",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-0dbd8d494b6ba7604"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:720078235361:subnet/subnet-0616816437bc31e73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.64.0/22",
            "id": "subnet-0616816437bc31e73",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "720078235361",
            "tags": {
              "Name": "terraform-eks-production-sbn-public-1",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-0dbd8d494b6ba7604"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:720078235361:subnet/subnet-0df563f3e78400d1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.80.0/22",
            "id": "subnet-0df563f3e78400d1f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "720078235361",
            "tags": {
              "Name": "terraform-eks-production-sbn-public-2",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-0dbd8d494b6ba7604"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:720078235361:subnet/subnet-0afb617b045ca673f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/22",
            "id": "subnet-0afb617b045ca673f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "720078235361",
            "tags": {
              "Name": "terraform-eks-production-sbn-public-0",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-0dbd8d494b6ba7604"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:720078235361:subnet/subnet-0e3ee98153fc946d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/22",
            "id": "subnet-0e3ee98153fc946d4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "720078235361",
            "tags": {
              "Name": "terraform-eks-production-sbn-public-1",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-0dbd8d494b6ba7604"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:720078235361:subnet/subnet-022be46fd71268fd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/22",
            "id": "subnet-022be46fd71268fd2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "720078235361",
            "tags": {
              "Name": "terraform-eks-production-sbn-public-2",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-0dbd8d494b6ba7604"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:720078235361:vpc/vpc-0dbd8d494b6ba7604",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dc65ccb26c5803f8",
            "default_route_table_id": "rtb-0adcdd0fba38026c5",
            "default_security_group_id": "sg-09018dfe5c0128f37",
            "dhcp_options_id": "dopt-f0af2c8a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dbd8d494b6ba7604",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0adcdd0fba38026c5",
            "owner_id": "720078235361",
            "tags": {
              "Name": "terraform-eks-production-vpc",
              "kubernetes.io/cluster/terraform-eks": "shared"
            }
          }
        }
      ]
    }
  ]
}